--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, shrink-to-fit=0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
-    <title>Three.js example</title>
+    <title>3d-waves</title>
     <style>
       html,
       body {
