Fix MIME type issues for JavaScript modules

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </svg>
       Edited by Baasil Ali
     </a>
-    <script type="module" src="src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
     <script>
       window.addEventListener('error', function(e) {
         const errorMessage = document.getElementById('error-message');
